[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Final.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Credits.gd" type="Script" id=3]
[ext_resource path="res://Assets/Background/titulo_branco.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/Control.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/TileMap2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/Morte.tscn" type="PackedScene" id=8]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 2464, 0 )
b = Vector2( -896, 0 )

[node name="Final" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Credits" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Credits"]
position = Vector2( 264, 88 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Credits"]
visible = false
margin_left = 200.0
margin_top = 136.0
margin_right = 302.0
margin_bottom = 218.0
text = "Feito Por:

Diogo Amorim
Mateus Pedrosa
Rafael Cardozo"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Credits"]
visible = false
margin_left = 208.0
margin_top = 256.0
margin_right = 298.0
margin_bottom = 270.0
text = "aperte espa√ßo"

[node name="Control" parent="CanvasLayer" instance=ExtResource( 5 )]
fase = "fase6"

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
margin_left = 200.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 54.0

[node name="TileMap2" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 65535, -1073741811, 0, 131071, -1073741811, 0, 196607, -1073741811, 0, 262143, -1073741811, 0, 327679, -1073741811, 0, 393215, -1073741811, 0, 458751, -1073741811, 0, 524287, -1073741811, 0, 458752, 1, 0, 458753, -1073741821, 0, 458754, -1073741821, 0, 458755, -1073741821, 0, 458756, -1073741821, 0, 458757, -1073741821, 0, 458758, -1073741821, 0, 458759, -1073741821, 0, 458760, -1073741821, 0, 458761, -1073741821, 0, 458762, -1073741821, 0, 458763, -1073741821, 0, 458764, -1073741821, 0, 458765, -1073741821, 0, 458766, -1073741821, 0, 458767, -1073741821, 0, 458768, -1073741821, 0, 458769, -1073741821, 0, 458770, -1073741821, 0, 458771, -1073741821, 0, 458772, -1073741821, 0, 458773, -1073741821, 0, 458774, -1073741821, 0, 458775, -1073741821, 0, 458776, -1073741821, 0, 458777, -1073741821, 0, 458778, -1073741821, 0, 458779, -1073741821, 0, 458780, -1073741821, 0, 458781, -1073741821, 0, 458782, -1073741821, 0, 458783, -1073741821, 0, 458784, -1073741821, 0, 458785, -1073741821, 0, 458786, -1073741821, 0, 458787, -1073741821, 0, 458788, 2, 0, 589823, -1073741811, 0, 524288, -1610612731, 0, 524289, -1610612713, 0, 524290, -1610612713, 0, 524291, -1610612713, 0, 524292, -1610612713, 0, 524293, -1610612713, 0, 524294, -1610612713, 0, 524295, -1610612713, 0, 524296, -1610612713, 0, 524297, -1610612713, 0, 524298, -1610612713, 0, 524299, -1610612713, 0, 524300, -1610612713, 0, 524301, -1610612713, 0, 524302, -1610612713, 0, 524303, -1610612713, 0, 524304, -1610612713, 0, 524305, -1610612713, 0, 524306, -1610612713, 0, 524307, -1610612713, 0, 524308, -1610612713, 0, 524309, -1610612713, 0, 524310, -1610612713, 0, 524311, -1610612713, 0, 524312, -1610612713, 0, 524313, -1610612713, 0, 524314, -1610612713, 0, 524315, -1610612713, 0, 524316, -1610612713, 0, 524317, -1610612713, 0, 524318, -1610612713, 0, 524319, -1610612713, 0, 524320, -1610612713, 0, 524321, -1610612713, 0, 524322, -1610612713, 0, 524323, -1610612713, 0, 524324, 3, 0, 655359, -1073741811, 0, 589824, -1610612731, 0, 589825, -1610612713, 0, 589826, -1610612713, 0, 589827, -1610612713, 0, 589828, -1610612713, 0, 589829, -1610612713, 0, 589830, -1610612713, 0, 589831, -1610612713, 0, 589832, -1610612713, 0, 589833, -1610612713, 0, 589834, -1610612713, 0, 589835, -1610612713, 0, 589836, -1610612713, 0, 589837, -1610612713, 0, 589838, -1610612713, 0, 589839, -1610612713, 0, 589840, -1610612713, 0, 589841, -1610612713, 0, 589842, -1610612713, 0, 589843, -1610612713, 0, 589844, -1610612713, 0, 589845, -1610612713, 0, 589846, -1610612713, 0, 589847, -1610612713, 0, 589848, -1610612713, 0, 589849, -1610612713, 0, 589850, -1610612713, 0, 589851, -1610612713, 0, 589852, -1610612713, 0, 589853, -1610612713, 0, 589854, -1610612713, 0, 589855, -1610612713, 0, 589856, -1610612713, 0, 589857, -1610612713, 0, 589858, -1610612713, 0, 589859, -1610612713, 0, 589860, 3, 0, 655360, -1610612731, 0, 655361, -1610612713, 0, 655362, -1610612713, 0, 655363, -1610612713, 0, 655364, -1610612713, 0, 655365, -1610612713, 0, 655366, -1610612713, 0, 655367, -1610612713, 0, 655368, -1610612713, 0, 655369, -1610612713, 0, 655370, -1610612713, 0, 655371, -1610612713, 0, 655372, -1610612713, 0, 655373, -1610612713, 0, 655374, -1610612713, 0, 655375, -1610612713, 0, 655376, -1610612713, 0, 655377, -1610612713, 0, 655378, -1610612713, 0, 655379, -1610612713, 0, 655380, -1610612713, 0, 655381, -1610612713, 0, 655382, -1610612713, 0, 655383, -1610612713, 0, 655384, -1610612713, 0, 655385, -1610612713, 0, 655386, -1610612713, 0, 655387, -1610612713, 0, 655388, -1610612713, 0, 655389, -1610612713, 0, 655390, -1610612713, 0, 655391, -1610612713, 0, 655392, -1610612713, 0, 655393, -1610612713, 0, 655394, -1610612713, 0, 655395, -1610612713, 0, 655396, 3, 0, 720896, -1610612731, 0, 720897, -1610612713, 0, 720898, -1610612713, 0, 720899, -1610612713, 0, 720900, -1610612713, 0, 720901, -1610612713, 0, 720902, -1610612713, 0, 720903, -1610612713, 0, 720904, -1610612713, 0, 720905, -1610612713, 0, 720906, -1610612713, 0, 720907, -1610612713, 0, 720908, -1610612713, 0, 720909, -1610612713, 0, 720910, -1610612713, 0, 720911, -1610612713, 0, 720912, -1610612713, 0, 720913, -1610612713, 0, 720914, -1610612713, 0, 720915, -1610612713, 0, 720916, -1610612713, 0, 720917, -1610612713, 0, 720918, -1610612713, 0, 720919, -1610612713, 0, 720920, -1610612713, 0, 720921, -1610612713, 0, 720922, -1610612713, 0, 720923, -1610612713, 0, 720924, -1610612713, 0, 720925, -1610612713, 0, 720926, -1610612713, 0, 720927, -1610612713, 0, 720928, -1610612713, 0, 720929, -1610612713, 0, 720930, -1610612713, 0, 720931, -1610612713, 0, 720932, 3, 0, 786432, -1610612731, 0, 786433, -1610612713, 0, 786434, -1610612713, 0, 786435, -1610612713, 0, 786436, -1610612713, 0, 786437, -1610612713, 0, 786438, -1610612713, 0, 786439, -1610612713, 0, 786440, -1610612713, 0, 786441, -1610612713, 0, 786442, -1610612713, 0, 786443, -1610612713, 0, 786444, -1610612713, 0, 786445, -1610612713, 0, 786446, -1610612713, 0, 786447, -1610612713, 0, 786448, -1610612713, 0, 786449, -1610612713, 0, 786450, -1610612713, 0, 786451, -1610612713, 0, 786452, -1610612713, 0, 786453, -1610612713, 0, 786454, -1610612713, 0, 786455, -1610612713, 0, 786456, -1610612713, 0, 786457, -1610612713, 0, 786458, -1610612713, 0, 786459, -1610612713, 0, 786460, -1610612713, 0, 786461, -1610612713, 0, 786462, -1610612713, 0, 786463, -1610612713, 0, 786464, -1610612713, 0, 786465, -1610612713, 0, 786466, -1610612713, 0, 786467, -1610612713, 0, 786468, 3, 0, 851968, -1610612731, 0, 851969, -1610612713, 0, 851970, -1610612713, 0, 851971, -1610612713, 0, 851972, -1610612713, 0, 851973, -1610612713, 0, 851974, -1610612713, 0, 851975, -1610612713, 0, 851976, -1610612713, 0, 851977, -1610612713, 0, 851978, -1610612713, 0, 851979, -1610612713, 0, 851980, -1610612713, 0, 851981, -1610612713, 0, 851982, -1610612713, 0, 851983, -1610612713, 0, 851984, -1610612713, 0, 851985, -1610612713, 0, 851986, -1610612713, 0, 851987, -1610612713, 0, 851988, -1610612713, 0, 851989, -1610612713, 0, 851990, -1610612713, 0, 851991, -1610612713, 0, 851992, -1610612713, 0, 851993, -1610612713, 0, 851994, -1610612713, 0, 851995, -1610612713, 0, 851996, -1610612713, 0, 851997, -1610612713, 0, 851998, -1610612713, 0, 851999, -1610612713, 0, 852000, -1610612713, 0, 852001, -1610612713, 0, 852002, -1610612713, 0, 852003, -1610612713, 0, 852004, 3, 0, 917504, -1610612732, 0, 917505, -1610612733, 0, 917506, -1610612733, 0, 917507, -1610612733, 0, 917508, -1610612733, 0, 917509, -1610612733, 0, 917510, -1610612733, 0, 917511, -1610612733, 0, 917512, -1610612733, 0, 917513, -1610612733, 0, 917514, -1610612733, 0, 917515, -1610612733, 0, 917516, -1610612733, 0, 917517, -1610612733, 0, 917518, -1610612733, 0, 917519, -1610612733, 0, 917520, -1610612733, 0, 917521, -1610612733, 0, 917522, -1610612733, 0, 917523, -1610612733, 0, 917524, -1610612733, 0, 917525, -1610612733, 0, 917526, -1610612733, 0, 917527, -1610612733, 0, 917528, -1610612733, 0, 917529, -1610612733, 0, 917530, -1610612733, 0, 917531, -1610612733, 0, 917532, -1610612733, 0, 917533, -1610612733, 0, 917534, -1610612733, 0, 917535, -1610612733, 0, 917536, -1610612733, 0, 917537, -1610612733, 0, 917538, -1610612733, 0, 917539, -1610612733, 0, 917540, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 48, 176 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 200, -30.9473 )
current = true
limit_left = 0

[node name="Morte" parent="." instance=ExtResource( 8 )]
position = Vector2( 1344, 32 )

[node name="EndGameCredtis" type="Area2D" parent="."]
position = Vector2( 256, 10000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndGameCredtis"]
shape = SubResource( 1 )

[node name="EndGameTitle" type="Area2D" parent="."]
position = Vector2( 256, 20000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndGameTitle"]
shape = SubResource( 1 )

[node name="EndGameFinish" type="Area2D" parent="."]
position = Vector2( 256, 30000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndGameFinish"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Morte" to="CanvasLayer/Credits" method="_on_Morte_body_entered"]
[connection signal="body_entered" from="Morte" to="CanvasLayer/Control" method="_on_Morte_body_entered"]
[connection signal="body_entered" from="EndGameCredtis" to="CanvasLayer/Credits" method="_on_EndGame_body_entered"]
[connection signal="body_entered" from="EndGameTitle" to="CanvasLayer/Credits" method="_on_EndGameTitle_body_entered"]
[connection signal="body_entered" from="EndGameFinish" to="CanvasLayer/Credits" method="_on_EndGameFinish_body_entered"]

[editable path="Morte"]
